2006-08-08  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangleoptions.c
	(gimp_rectangle_options_interface_get_type): made GimpToolOptions a
	prerequisite of the GimpRectangleOptions interface.

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_interface_get_type): made GimpDrawTool a
	prerequisite of the GimpRectangleTool interface.

2006-08-08  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-save-dialog.c
	(file_save_dialog_new): removed workaround for a GtkFileChooser
	bug that doesn't seem to be needed any longer.
	(file_save_dialog_check_uri): commented out debug spew.

2006-08-07  Raphaël Quinet  <raphael@gimp.org>

	* HACKING: Mention that the mailing list is a good place to
	discuss patches (if they need to be discussed).

2006-08-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-interface.c (script_fu_interface):
	added missing call to gimp_window_set_transient(). Fixes bug #348249.

2006-08-07  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpactiongroup.c
	(gimp_action_group_add_string_actions): added missing cast.

2006-08-06  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimputils.c (gimp_strip_uline): restore unescaping
	of "__"-escaped underlines which was broken since the addition of
	"(_X)"-stripping.

2006-08-06  Karine Delvare  <edhel@gimp.org>

	* app/tools/gimprectangletool.c: Applied patch from Karl Günter
	Wünsch which finishes improving rectangle tools behaviour when
	resizing with fixed ratio. Fixes bug #349337.

2006-08-05  Michael Natterer  <mitch@gimp.org>

	* app/pdb/Makefile.am
	* app/pdb/gimppluginprocedure.[ch]
	* app/pdb/gimptemporaryprocedure.[ch]: removed these files...

	* app/plug-in/Makefile.am
	* app/plug-in/gimppluginprocedure.[ch]
	* app/plug-in/gimptemporaryprocedure.[ch]: ...and added them here.

	* app/Makefile.am
	* app/config/Makefile.am: reordered stuff to make it link again.

	* app/pdb/gimppdb.c: removed gimp_pdb_eek() hack.

	* app/actions/plug-in-actions.c