@@ -157,8 +157,7 @@ gimp_config_serialize_property (GimpConfig       *config,
                                 GParamSpec       *param_spec,
                                 GimpConfigWriter *writer)
 {
-  GTypeClass          *owner_class;
-  GimpConfigInterface *config_iface;
+  GimpConfigInterface *config_iface = NULL;
   GimpConfigInterface *parent_iface = NULL;
   GValue               value   = { 0, };
   gboolean             success = FALSE;
@@ -179,28 +178,32 @@ gimp_config_serialize_property (GimpConfig       *config,
       return TRUE;
     }
 
-  owner_class = g_type_class_peek (param_spec->owner_type);
-
-  config_iface = g_type_interface_peek (owner_class, GIMP_TYPE_CONFIG);
-
-  /*  We must call serialize_property() *only* if the *exact* class
-   *  which implements it is param_spec->owner_type's class.
-   *
-   *  Therefore, we ask param_spec->owner_type's immediate parent class
-   *  for it's GimpConfigInterface and check if we get a different pointer.
-   *
-   *  (if the pointers are the same, param_spec->owner_type's
-   *   GimpConfigInterface is inherited from one of it's parent classes
-   *   and thus not able to handle param_spec->owner_type's properties).
-   */
-  if (config_iface)
+  if (G_TYPE_IS_OBJECT (param_spec->owner_type))
     {
-      GTypeClass *owner_parent_class;
+      GTypeClass *owner_class = g_type_class_peek (param_spec->owner_type);
 
-      owner_parent_class = g_type_class_peek_parent (owner_class),
+      config_iface = g_type_interface_peek (owner_class, GIMP_TYPE_CONFIG);
 
-      parent_iface = g_type_interface_peek (owner_parent_class,
-                                            GIMP_TYPE_CONFIG);
+      /*  We must call serialize_property() *only* if the *exact* class
+       *  which implements it is param_spec->owner_type's class.
+       *
+       *  Therefore, we ask param_spec->owner_type's immediate parent class
+       *  for it's GimpConfigInterface and check if we get a different
+       *  pointer.
+       *
+       *  (if the pointers are the same, param_spec->owner_type's
+       *   GimpConfigInterface is inherited from one of it's parent classes
+       *   and thus not able to handle param_spec->owner_type's properties).
+       */
+      if (config_iface)
+        {
+          GTypeClass *owner_parent_class;
+
+          owner_parent_class = g_type_class_peek_parent (owner_class);
+
+          parent_iface = g_type_interface_peek (owner_parent_class,
+                                                GIMP_TYPE_CONFIG);
+        }
     }
 
   if (config_iface                     &&
